Archive2/6a/0128b9a2d48b02/output
main.cpp: In instantiation of 'Ptr<T, safety_policy>::operator Ptr<T, target_safety>() const [with target_safety = NoChecking; T = int; safety_policy = NotNull]':
main.cpp:94:32:   required from here
main.cpp:62:5: error: static assertion failed: Safety policy of *this is not implicitly convertible to target's safety policy.
     static_assert( std::is_convertible<Ptr, target_host>::value,
     ^
